--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,25 +41,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:rowCount="6"
+        android:rowCount="7"
         android:columnCount="3"
+        android:alignmentMode="alignMargins"
+        android:columnOrderPreserved="false"
         android:background="#eeeeee"
-        android:padding="0dp" />
+        />
 
     <!-- Car on its own row -->
-    <LinearLayout
-        android:background="#eeeeee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingBottom="0dp">
 
-        <ImageView
-            android:id="@+id/car"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:src="@drawable/car" />
-    </LinearLayout>
 
     <!-- Button row below -->
     <LinearLayout
@@ -68,7 +58,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:padding="16dp"
+        android:padding="1dp"
         >
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
